fix(dropdown): select[One/Many]List
Refactor dropdown menu handling (scrolling/positioning). If the user scrolls, the dropdown menu should be closed. The dropdown menu is now scrollable if it is too big for the screen. The reference element must always be visible (important for filtering and tc:suggests). PopperJs is removed.

Issue: TOBAGO-2389, TOBAGO-2390

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -45,6 +45,7 @@ $icon-sort-numbers: (
 ) !default;
 
 :root {
+  --tobago-dropdown-menu-z-index: 1100; //usually the highest z-index value
   --tobago-bs-input-padding-x: #{$input-padding-x};
   --tobago-page-padding-top: 1rem;
   --tobago-header-margin-bottom: var(--tobago-page-padding-top);
@@ -297,7 +298,12 @@ $icon-sort-numbers: (
     &.tobago-dropdown-menu {
       /* Use .tobago-dropdown-menu instead of .dropdown-menu to prevent Bootstrap from creating a dropdown instance.
          This leads to javascript error if arrow up/down is pressed. */
-      @extend .dropdown-menu
+      @extend .dropdown-menu;
+
+      position: fixed;
+      overflow: auto;
+      overscroll-behavior: none;
+      z-index: var(--tobago-dropdown-menu-z-index);
     }
 
     &.list-group-item {
